<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <FrameLayout
        android:id="@+id/expenseCategoryImageGroup"
        android:layout_width="50dp"
        android:layout_height="51dp"
        android:background="@drawable/rectangle_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/expenseCategoryImageView"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:contentDescription="@string/text_category"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_other_expenses"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintStart_toEndOf="@+id/expenseCategoryImageGroup"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/transactionName"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginTop="5dp"
            android:includeFontPadding="false"
            android:text="@string/text_expense_name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/transactionDate"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginBottom="5dp"
            android:includeFontPadding="false"
            android:text="@string/text_date_placeholder"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/transactionAmount"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="end"
        android:includeFontPadding="false"
        android:text="@string/text_amount"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
