<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- NestedScrollView -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/addExpenseScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <!-- Container for Card Preview and Form -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Card Preview -->
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="220dp"
                android:id="@+id/cardList"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emptyText"
                android:text="Card Data Not Available"
                android:visibility="gone"
                android:textAlignment="center"
                android:layout_gravity="center"
                />
            <!-- Form -->
            <LinearLayout
                android:id="@+id/formContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/formTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_add_debit_card"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/formSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/text_card_message"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <!-- Name on Card -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameOnCardInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_name_on_card">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameOnCardInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Card Number -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cardNumberInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_card_number"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cardNumberInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="16" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Expiry Date and CVC -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/expiryDateInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/text_expiry_date">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/expiryDateInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cvcInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:hint="@string/text_cvv">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/cvcInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberPassword"
                            android:maxLength="4" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <!-- Zip Code -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/zipInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_zip_code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/zipInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Add Card Button -->
                <Button
                    android:id="@+id/addCardButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_background"
                    android:text="@string/text_add_card"
                    android:textColor="@color/teal_700" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
